# perplexity-mpc

./: .gitignore  README.md
perplexity-ask/: index.ts  package-lock.json  package.json
perplexity-ask/python/: README.md  main.py  pyproject.toml
perplexity-ask/python/perplexity_ask/: __init__.py  main.py
perplexity-ask/python_forked/: Dockerfile  pyproject.toml
perplexity-ask/python_forked/src/perplexity_mcp/: server.py
perplexity-ask/typescript/: index.ts  package-lock.json  package.json
