[project]
name = "perplexity-ask"
version = "0.1.0"
description = "Perplexity API integration for MCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
]

[project.scripts]
perplexity-ask = "perplexity_ask.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
